# vide

./: .clangd  .gitignore  .gitmodules  Cargo.toml  README.md  README.zh-CN.md  dist-workspace.toml  rust-toolchain.toml
crates/ide/: Cargo.toml
crates/ide/src/: analysis.rs  analysis_host.rs  call_hierarchy.rs  code_action.rs  code_lens.rs  completion.rs  definitions.rs  diagnostics.rs  document_highlight.rs  document_symbols.rs  folding_ranges.rs  formatting.rs  goto_declaration.rs  goto_definition.rs  hover.rs  indexing.rs  inlay_hint.rs  lib.rs  macro_hover_tests.rs  markup.rs  module_resolution.rs  navigation_target.rs  presentation.rs  references.rs  rename.rs  render.rs  selection_ranges.rs  semantic_index.rs  semantic_target.rs  semantic_tokens.rs  signature_help.rs  source_change.rs  source_targets.rs  source_tokens.rs  syntax_targets.rs  verilog_2005.rs  workspace_symbols.rs
crates/ide/src/code_action/: context.rs  diagnostics.rs  engine.rs  handlers.rs  module_members.rs  tests.rs
crates/ide/src/completion/: context.rs  engine.rs  request.rs  syntax_keywords.rs  syntax_prediction.rs
crates/ide/src/db/: root_db.rs  workspace_symbol_index_db.rs
crates/ide/src/diagnostics/: preproc.rs
crates/ide/src/facts/: edit.rs  mod.rs  relation.rs  symbol.rs  target.rs
crates/ide/src/hover/: include.rs  macro_hover.rs
crates/ide/src/references/: preproc.rs  search.rs
crates/ide/src/semantic_tokens/: port.rs
crates/ide/src/snapshots/: ide__definitions__tests__definition_name_range_matrix.snap  ide__formatting__tests__on_type_no_edit_matrix.snap  ide__hover__tests__macro_expansion_hover_text_matrix.snap  ide__inlay_hint__tests__inlay_hint_fixtures@ambiguous_named_ansi_port_has_no_hint.sv.snap  ide__inlay_hint__tests__inlay_hint_fixtures@comment_only_range_skips_module_end_hint.sv.snap  ide__inlay_hint__tests__inlay_hint_fixtures@explicit_non_ansi_port_label_uses_internal_ref_for_direction.sv.snap  ide__inlay_hint__tests__inlay_hint_fixtures@extra_ordered_connections_do_not_invent_ansi_port_hints.sv.snap  (+89 more)
crates/ide/tests/: completion.rs
crates/semantics/: Cargo.toml
crates/semantics/src/: lib.rs  module_resolution.rs
crates/slang-adapter/: Cargo.toml
crates/slang-adapter/src/: kind_map.rs  lib.rs
crates/slang-sys/: CMakeLists.txt  Cargo.toml  build.rs
crates/slang-sys/scripts/: generate_diagnostic.py  generate_syntax_kind.py  generate_token_kind.py  generate_trivia_kind.py
crates/slang-sys/src/: diagnostic.rs  ffi.rs  lib.rs  syntax.rs  token.rs  wrapper.cpp  wrapper.h
crates/syntax/: Cargo.toml  build.rs
crates/syntax/src/: ast.rs  facts.rs  has_name.rs  has_text_range.rs  kinds.rs  lib.rs  ptr.rs  raw.rs  slang_ext.rs  syntax_ext.rs  tests.rs  token.rs  tree.rs  treesit_ext.rs  trivia.rs  values.rs
crates/syntax/syntax_sourcegen/: ast_src.rs  mod.rs  sourcegen_ast.rs
crates/vfs/: Cargo.toml  UPSTREAM.md
crates/vfs/src/: anchored_path.rs  dummy.rs  file_set.rs  lib.rs  loader.rs  notify.rs  vfs.rs  vfs_path.rs
crates/vide-lsp-wasm/: Cargo.toml
crates/vide-lsp-wasm/scripts/: build.mjs
(+1150 files in other folders)
