[package]
name = "ide"
version = "0.0.0"
description = "IDE related components"

edition.workspace = true

[dependencies]
base-db.workspace = true
hir.workspace = true
ide-db.workspace = true
line-index.workspace = true
rustc-hash.workspace = true
smol_str.workspace = true
span.workspace = true
syntax.workspace = true
triomphe.workspace = true
utils.workspace = true
vfs.workspace = true
