[package]
name = "semantics"
version = "0.0.0"
description = "Source-level semantic facade over HIR"
edition.workspace = true

[dependencies]
hir.workspace = true
syntax.workspace = true
utils.workspace = true
vfs.workspace = true

[dev-dependencies]
rustc-hash.workspace = true
triomphe.workspace = true
