[package]
name = "syntax"
version = "0.0.0"
description = "Owned rowan syntax tree model"

edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either.workspace = true
rowan.workspace = true
serde.workspace = true
smol_str.workspace = true
utils.workspace = true
