[package]
name = "vfs"
version = "0.0.0"
description = "Owned fork of rust-analyzer VFS: path-interned files and async loader/watcher."
edition.workspace = true

[features]
default = ["notify-backend"]
notify-backend = ["dep:notify", "dep:rayon", "dep:walkdir"]

[dependencies]
crossbeam-channel.workspace = true
fst = "0.4.7"
globset.workspace = true
indexmap = { version = "2.0.0", features = [] }
nohash-hasher.workspace = true
notify = { version = "6.1.1", optional = true }
rayon = { version = "1.10.0", optional = true }
rustc-hash.workspace = true
tracing.workspace = true
triomphe.workspace = true
utils.workspace = true
walkdir = { version = "2.4.0", optional = true }

[dev-dependencies]
tempfile.workspace = true
