[package]
name = "vide-lsp-wasm"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "vide-lsp-wasm"
path = "src/main.rs"

[dependencies]
# No server-side notify watcher under wasm/emscripten; client supplies files.
vide = { path = "../..", default-features = false }
serde_json.workspace = true
